--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
 body {
-  background-image: url("../images/Report Cover Images.jpg");
+<!-- background-image: url("../images/Report Cover Images.jpg"); -->
   background-color: #cccccc;
 }
